# hugo-blog

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .prettierignore  LICENSE.md  Makefile  README.md  config.yml  dev-requirements.txt  netlify.toml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tasks.py
.forestry/: settings.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  mergify.yml
archetypes/: default.md  posts.md
blog/: pelicanconf.py  publishconf.py  requirements.txt
content/: 2020-02-18---few-reasons-not-to-drop-missing-values.md  2020-02-18---few-reasons-not-to-drop-missing-values.rst  2020-02-28---ml-engineer-vs-data-scientists.md  2020-02-28---ml-engineer-vs-data-scientists.rst  2020-03-03---the-second-most-important-skill-for-a-data-scientist.md  2020-03-03---the-second-most-important-skill-for-a-data-scientist.rst  2020-04-02---AI-business-ideas.md  2020-04-02---AI-business-ideas.rst  2020-05-13---static-site-vs-medium.md  2020-05-13---static-site-vs-medium.rst  2020-06-16---datascience-misconceptions.md  2020-06-16---datascience-misconceptions.rst  2020-08-13---traditional-vs-deep-learning-cv-techniques.md  2020-08-13---traditional-vs-deep-learning-cv-techniques.rst  2020-10-11---treat-your-open-source-project-as-a-business.md  2020-10-11---treat-your-open-source-project-as-a-business.rst  2020-12-25---customize-windows-terminal.md  2020-12-25---customize-windows-terminal.rst  2021-01-21---a-standard-ci-cd-pipeline-for-python-projects.md  about-me.md  about.md  archives.md  projects.md  (+7 more)
(+183 files in other folders)
